--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@types/hammerjs": "^2.0.36",
+    "hammerjs": "^2.0.8",
+    "ionic-pullup": "^4.0.0-beta.6",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
